--- a/app/src/main/res/layout/activity_chatting_detail.xml
+++ b/app/src/main/res/layout/activity_chatting_detail.xml
@@ -19,7 +19,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="80dp"
-            android:background="@drawable/person_gray"
+            android:background="@drawable/noonsong"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
