--- a/app/src/main/res/layout/activity_chatting_list.xml
+++ b/app/src/main/res/layout/activity_chatting_list.xml
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        tools:listitem="@layout/item_recycler"
+        tools:listitem="@layout/buy_item_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/chattingtheme"
         app:layout_constraintBottom_toBottomOf="parent"
