recyclerview 및 activity 연결

--- a/app/src/main/res/layout/activity_sell_setting.xml
+++ b/app/src/main/res/layout/activity_sell_setting.xml
@@ -96,6 +96,7 @@
                 android:hint="시간대"/>
 
             <Button
+                android:id="@+id/add_complete"
                 android:text="완료"
                 android:textSize="17sp"
                 android:gravity="center"
