--- a/app/src/main/res/layout/activity_sell_detail.xml
+++ b/app/src/main/res/layout/activity_sell_detail.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
@@ -189,6 +189,7 @@
                             android:textSize="20sp" />
 
                         <Button
+                            android:id="@+id/btn_request"
                             android:layout_width="70dp"
                             android:layout_height="40dp"
                             android:background="@drawable/division_box3"
