--- a/app/src/main/res/layout/activity_buy_detail.xml
+++ b/app/src/main/res/layout/activity_buy_detail.xml
@@ -10,6 +10,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
+        android:layout_marginLeft="5dp"
         android:background="@drawable/back_arrow"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toStartOf="@+id/textView"
@@ -26,7 +27,7 @@
         android:gravity="center"
         android:text="물품 신청"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="23sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -128,7 +129,7 @@
                         <LinearLayout
                             android:layout_gravity="center"
                             android:layout_width="320dp"
-                            android:layout_height="100dp"
+                            android:layout_height="80dp"
                             android:padding="10dp"
                             android:orientation="horizontal">
 
@@ -155,7 +156,7 @@
 
                         <View
                             android:layout_width="340dp"
-                            android:layout_height="3dp"
+                            android:layout_height="1dp"
                             android:layout_gravity="center"
                             android:background="@color/division_line" />
 
@@ -172,47 +173,93 @@
 
                 </FrameLayout>
                     <LinearLayout
-                        android:layout_marginTop="85dp"
+                        android:layout_marginTop="65dp"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="8dp"
+                        android:paddingLeft="20dp">
 
+                        <LinearLayout
+                            android:layout_width="150dp"
+                            android:layout_height="80dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginLeft="10dp"
+                            android:orientation="vertical"
+                            android:background="@drawable/division_box6">
                         <TextView
-                            android:layout_marginTop="37dp"
-                            android:id="@+id/time_start"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="50dp"
-                            android:text="시작 시간 자리"
+                            android:gravity="center"
+                            android:layout_width="150dp"
+                            android:layout_height="40dp"
+                            android:text="대여"
+                            android:textStyle="bold"
+                            android:textColor="@color/division_line"
+                            android:fontFamily="@font/gmarket"
                             android:textSize="20sp"
                             app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <TextView android:layout_marginTop="37dp"
-                        android:id="@+id/time_end"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="50dp"
-                        android:text="끝 시간 자리"
-                        android:textSize="20sp"
-                        app:layout_constraintLeft_toRightOf="@id/time_start"
-                        app:layout_constraintTop_toTopOf="parent" />
+                            <TextView
+                                android:gravity="center"
+                                android:id="@+id/time_start"
+                                android:layout_width="150dp"
+                                android:layout_height="40dp"
+                                android:text="시간을 선택해주세요"
+                                android:textColor="@color/division_line"
+                                android:fontFamily="@font/gmarket"
+                                android:textSize="13sp"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="150dp"
+                            android:layout_height="80dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginLeft="10dp"
+                            android:orientation="vertical"
+                            android:background="@drawable/division_box6">
+                            <TextView
+                                android:gravity="center"
+                                android:layout_width="150dp"
+                                android:layout_height="40dp"
+                                android:text="반납"
+                                android:textStyle="bold"
+                                android:textColor="@color/division_line"
+                                android:fontFamily="@font/gmarket"
+                                android:textSize="20sp"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:gravity="center"
+                                android:id="@+id/time_end"
+                                android:layout_width="150dp"
+                                android:layout_height="40dp"
+                                android:text="시간을 선택해주세요"
+                                android:textColor="@color/division_line"
+                                android:fontFamily="@font/gmarket"
+                                android:textSize="13sp"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                        </LinearLayout>
                     </LinearLayout>
 
                 <Button
-                    android:id="@+id/btn_chat"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="25dp"
-                    android:layout_width="80dp"
-                    android:layout_height="45dp"
+                    android:id="@+id/btn_done"
+                    android:layout_width="74dp"
+                    android:layout_height="44dp"
                     android:layout_gravity="right"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="20sp"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
+                    android:layout_marginTop="35dp"
+                    android:layout_marginRight="20dp"
                     android:background="@drawable/division_box3"
-                    android:text="신청" />
+                    android:gravity="center"
+                    android:text="완료"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
