--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -6,17 +6,31 @@
     android:layout_height="match_parent"
     android:background="#0476D9">
 
-    <TextView
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/back_arrow"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.228"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="200dp"
         android:layout_height="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/gmarket"
         android:gravity="center"
         android:text="마이페이지"
-        android:textSize="20sp"
         android:textColor="@color/white"
+        android:textSize="23sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
